# zipline-zkvm

./: Cargo.toml
contracts/lib/openzeppelin-contracts/: package-lock.json
demo/demo_data/: candidate_cp.txt  trusted_cp.txt
finality-client/: Cargo.toml  test_finality_rule_3_0.json  test_finality_rule_3_1.json
finality-client/libs/crypto/: Cargo.toml
finality-client/libs/crypto/src/: bls.rs  bls_openvm.rs  hash_openvm.rs  lib.rs  spec_tests.rs
finality-client/libs/ssz-rs/ssz-rs/: Cargo.toml
finality-client/libs/ssz-rs/ssz-rs/src/: container.rs  list.rs  serde.rs  union.rs  vector.rs
finality-client/src/: attestation.rs  input.rs  state_patch.rs
finality-client/tests/: attestation.rs  direct_state_reader.rs  patch.rs  ssz_state_reader.rs  state_proofs.rs  verify.rs
finality-client/tests/patch_test_case/: mod.rs
finality-client/tests/state_proof_test_case/: mod.rs
finality-client/tests/zipline_test_case/: mod.rs
zipline-openvm/: Cargo.toml  openvm.toml
zipline-openvm/openvm/: app.vk  exe_commit.bytes
zipline-openvm/src/: main.rs
