[workspace]

members = [
    "finality-client/libs/validator-shuffling",
    "preimage-oracle",
    "finality-client",
    "finality-client/libs/zipline-spec",
    "emulator",
    "finality-client/libs/crypto",
    "finality-client/libs/test-utils", "zipline-openvm",
]

# this is so that when we are doing debug and release builds, we don't 
# also have to build testing-utils and thus a heck ton of lighthouse
default-members = [
    "finality-client/libs/validator-shuffling",
    "preimage-oracle",
    "finality-client",
    "finality-client/libs/zipline-spec",
    "emulator",
    "finality-client/libs/crypto"
]
exclude = [
    "zipline-state-transition-mips"
]

[workspace.dependencies]  
ssz-rs = { path = "./finality-client/libs/ssz-rs/ssz-rs", default-features = false, features = ["serde"] }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", default-features = false, features = ["serde"] }

[patch.crates-io]
blst = { git = "https://github.com/ec2/blst", rev = "179bf0e" }
[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/nulltea/ethereum-consensus", rev = "facd29481b844c864434b9d6d580ce081ddd6570" }
# ethereum-consensus = { path = "../ethereum-consensus", default-features = false }
[patch."https://github.com/ralexstokes/ssz-rs"]
# patched version to build in restricted_std. Compatible with version of ethereum-consensus above
ssz-rs = { path = "./finality-client/libs/ssz-rs/ssz-rs" }

